# hplib

./: .gitignore  README.md  dbclass.py  mailclass.py  publish.sh  pyproject.toml  requirements.in  setup.py
hplib/: __init__.py  db-sample.ini  dbclass.py  mail-sample.ini
tests/: test_dbclass.py
