[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hplib"
version = "3.0.7"
description = "Usefull Python classes for mysql database en sending emails"
readme = "README.md"
authors = [{ name = "HP Harmsen", email = "hp@harmsen.nl" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["days", "adding days", "difference between days", "range of days", "last Monday"]
dependencies = ['configparser', 'pymysql', 'pyyaml', 'pytest', 'sqlalchemy', 'sqlparse']
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "pytest", "build", "twine"]

[project.urls]
Homepage = "https://github.com/hpharmsen/hplib"

